edit page fixed

--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -6,4 +6,9 @@ h1 {
 
 
 // Import Bootstrap v5  
-@import "~bootstrap/scss/bootstrap";  
+@import "~bootstrap/scss/bootstrap";
+
+
+
+// Import forms for bootstrap
+@import "rails_bootstrap_forms";
