--- a/app/views/arguments/edit.html.haml
+++ b/app/views/arguments/edit.html.haml
@@ -15,8 +15,8 @@
     .row
       .col-4
       .col-4.align-self-center.p-5
-        .container.align-items-center
-          %h2.ml-5 Edit Argument
+        .container
+          %h3.text-center Edit Argument...
           = render 'form', argument: @argument
       .col-4
 
