--- a/app/views/arguments/_form.html.haml
+++ b/app/views/arguments/_form.html.haml
@@ -35,6 +35,6 @@
   .field
     = form.text_field :title
   .field
-    = form.text_field :body
+    = form.text_area :body, :cols=>50
   .actions
     = form.primary
