--- a/app/views/arguments/new.html.haml
+++ b/app/views/arguments/new.html.haml
@@ -5,20 +5,18 @@
 / =render 'nav'
 
 
-
+=render 'nav'
 %html
   %head
     %title Arguments index
     %link{:href => "https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "https://fonts.googleapis.com/css?family=Inter", :rel => "stylesheet"}/
-    %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", :rel => "stylesheet"}/   
 
 %body{:style => "height: 100vh; background-color: white"}
   .container.h-100.text-black.p-15.align-items-center
     .row
       .col-4
       .col-4.align-self-center.p-5
-        .container.align-items-center
-          %h2.ml-5 New Argument
+        .container
+          %h2.text-center New Argument
           = render 'form', argument: @argument
       .col-4
