bootstrap on forms

--- a/app/views/arguments/_nav.html.haml
+++ b/app/views/arguments/_nav.html.haml
@@ -12,10 +12,10 @@
 
       %a.btn.btn-outline-dark.my-2.amy-lg-0.mx-2{href: arguments_path} Arguments
 
-      %a.btn.btn-outline-dark.my-2.amy-lg-0{href: arguments_path} Sign Out
+      %a.btn.btn-outline-dark.my-2.amy-lg-0{href: destroy_user_session_path} Sign Out
 
 
       %p
     - else 
-      %a.btn.btn-outline-dark.my-2.amy-lg-0{href: arguments_path} Sign In
+      %a.btn.btn-outline-dark.my-2.amy-lg-0{href: new_user_session_path} Sign In
   	
